<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center_horizontal"

    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:id="@+id/one"
    >
    <TextView
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ask"
        android:textSize="@dimen/tabs"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:onClick="tabStart"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:text="@string/start"
        android:id="@+id/tab_start"
        />
</LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/one"
                android:id="@+id/two"
                >
                <TextView
                    android:id="@+id/Privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Privacy"
                    android:textSize="@dimen/tabs"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:onClick="tabPrivacy"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/alart"
                    android:id="@+id/tab_Privacy"

                        />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/two"
                android:id="@+id/twoo"
                >
                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loginn"
                    android:textSize="@dimen/tabs"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:onClick="tablogin"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/tab_login"
                    android:id="@+id/tab_login"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/twoo"
                android:id="@+id/three"
                >
                <TextView
                    android:id="@+id/add_client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_client"
                    android:textSize="@dimen/tabs"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:onClick="tabAdd_client"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/client"
                    android:id="@+id/tab_add_client"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/three"
                android:id="@+id/five"
                >
                <TextView
                    android:id="@+id/record_client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/record_client"
                    android:textSize="@dimen/tabs"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:onClick="tab_recordclient"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/tab_record_client"
                    android:id="@+id/tab_record_client"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/five"
                android:id="@+id/six"
                >
                <TextView
                    android:id="@+id/contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contect_us"
                    android:textSize="@dimen/tabs"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:onClick="tabContact_us"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/tab_contect_us"
                    android:id="@+id/tab_contact_us"
                    />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>