<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/finance"
        android:paddingTop="4dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enter"
            android:textColor="@color/black"
            android:textSize="@dimen/details_message"
            android:id="@+id/current_data"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_border"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:background="@mipmap/textbox"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            android:id="@+id/header"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="right"
            android:textColor="@color/black"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_mission"
            android:background="@mipmap/textbox"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            android:id="@+id/additionmission"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="right"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enter"
            android:textColor="@color/black"
            android:textSize="@dimen/details_message"
            android:id="@+id/current_time"
            android:layout_margin="@dimen/space_border"
            android:layout_gravity="end"
            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finance"
        android:id="@+id/button_tasks"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/space_border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_task"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="start"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/textbox"
            android:id="@+id/date_time"
            android:contentDescription="@string/app_name"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_tasks"
        android:id="@+id/status"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/space_border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="start"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/textbox"
            android:id="@+id/choose_status"
            android:spinnerMode="dropdown"
            android:gravity="right"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:id="@+id/attachment"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/space_border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_file"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="start"
            />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="...."
            android:id="@+id/bt_attachment"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/textbox"
            android:id="@+id/attachment_file"
            android:contentDescription="@string/app_name"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/space_border"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/medbutton"
            android:text="@string/start_work"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/medbutton"
            android:text="@string/required"
            android:layout_weight="1"
            />
    </LinearLayout>
    </LinearLayout>