<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/alrakizaback"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lay_name"
        android:paddingBottom="18dp"
        android:layout_marginTop="@dimen/toolbar_admin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enter"
            android:textColor="@color/black"
            android:textSize="@dimen/details_message"
            android:id="@+id/current_data"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_border"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#c6c3c3"
            android:hint="@string/header"
            android:gravity="right"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/space_border"
            android:layout_margin="@dimen/space_border"
            android:background="@color/white"
            android:id="@+id/adding_header"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:singleLine="true"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#c6c3c3"
            android:hint="@string/write_mission"
            android:gravity="right"
            android:textSize="@dimen/size_text"
            android:padding="@dimen/space_border"
            android:background="@color/white"
            android:isScrollContainer="true"
            android:id="@+id/adding_mission"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="horizontal"
            android:maxLines="10"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enter"
            android:textColor="@color/black"
            android:textSize="@dimen/details_message"
            android:id="@+id/current_time"
            android:layout_margin="@dimen/space_border"
            android:layout_gravity="end"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lay_name"
            android:id="@+id/button_tasks"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/space_border"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_task"
                android:textSize="@dimen/size_text"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="start"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/textbox"
                android:id="@+id/date_time"
                android:contentDescription="@string/app_name"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/button_tasks"
            android:id="@+id/status"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/space_border"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="@dimen/size_text"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="start"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/textbox"
                android:id="@+id/choose_status"
                android:spinnerMode="dropdown"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/status"
            android:id="@+id/attachment"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/space_border"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attachment"
                android:textSize="@dimen/size_text"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="start"
                />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="...."
            android:id="@+id/bt_attachment"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/textbox"
                android:id="@+id/attachment_file"
                android:contentDescription="@string/app_name"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                />

</LinearLayout>
        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/attachment"
    android:layout_margin="@dimen/space_border"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@mipmap/bigbutton"
        android:text="@string/add_mission"
        android:textSize="@dimen/size_text_button"
        android:layout_below="@+id/lay_name"
        android:id="@+id/button_mission"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/bigbutton"
            android:text="@string/last_mission"
            android:textSize="@dimen/size_text_button"
            android:layout_below="@+id/lay_name"
            android:id="@+id/button_last_mission"
            />
</LinearLayout>
    </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/logo"
            android:layout_marginRight="5dp"
            android:text="@string/button_miss_extr"
            android:textSize="@dimen/size_text_button"
            android:id="@+id/extremployee"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/hint_button"
            android:text="@string/employee_data4"
            android:textSize="@dimen/size_text_button"
            android:id="@+id/mainemployee"
            />
    </LinearLayout>

</LinearLayout>