<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/text_layout"
    android:background="@mipmap/alrakizaback">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="45sp"

        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/toolbar"
        />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo_s"
                android:layout_gravity="center"
                android:id="@+id/logo"
                android:layout_below="@+id/toolbar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="@dimen/size_text_main"
                android:text="@string/logo"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/logo_detail"
                android:layout_below="@+id/logo"
                />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/logo"
        >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#c6c3c3"
        android:hint="@string/user_employee"
        android:textAlignment="center"
        android:background="@mipmap/textbox"
        android:id="@+id/username"
        android:textColor="#000000"
        android:inputType="text"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#c6c3c3"
        android:hint="@string/pass_employee"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:background="@mipmap/textbox"
        android:id="@+id/password"
        android:textColor="#000000"
        android:inputType="textWebPassword"
        android:layout_gravity="center"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_layout"
            android:layout_marginTop="30dp"
            android:id="@+id/button_login"
            android:textSize="@dimen/size_text_button"
            android:textStyle="bold"
            android:text="@string/enter"
            android:background="@mipmap/bigbutton"
            android:layout_gravity="center"
            />
</LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_help" />

    </RelativeLayout>

</ScrollView>
    </LinearLayout>

